# WoRRRkspace

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSES.txt  README.md  environment-lin.yml  environment-lin_non_cuda.yml  environment-mac.yml  environment-win.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.sh
cpp/: CMakeLists.txt  calculate.cpp  calculate.h  logger.cpp  logger.h  msvc_config.h
tests/: config.py  main_test.py  navigator.py  splash_screen.py  test_auth.py  test_reg.py
worrrkspace/: CMakeLists.txt  build_simple.py  main.py
worrrkspace/core/cpp/: calculate.h
worrrkspace/core/cpp_calculate/: __init__.py
worrrkspace/core/cpp_logger/: __init__.py  logger.py
worrrkspace/core/python/: audio_util.py  theme_manager.py  theme_util.py
worrrkspace/db/psql_schema/: 01_schema.sql  02_base_data.sql  03_procedures_triggers.sql
worrrkspace/src/cpp/: CMakeLists.txt  calculate.cpp  logger.cpp  msvc_config.h
worrrkspace/src/cpp_calculate/: calculate.py
worrrkspace/src/python/: audio_di.py  ip_util.py  theme_util.py
worrrkspace/ui/panels/: __init__.py  base_panel.py  chat_panel.py  logs_panel.py  solution_explorer.py  tools_panel.py
worrrkspace/ui/widgets/: __init__.py  base_widgets.py  graph_editor.py  markdown_editor.py  table_editor.py  task_editor.py
worrrkspace/windows/: AuthorizationWindow.py  AuthorizationWindow.ui  FirstRunWindow.py  MainWindow.py  MainWindow.ui  RegistrationWindow.py  RegistrationWindow.ui  test_MainWindow.py  test_quick.py
