[metadata]
name = worrrkspace
version = 0.1.0
author = HuiYTechnology
description = Hybrid AI-driven workspace
long_description = file: README.md
license = 

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.package_data]
worrrkspace = 
    resources/**
    themes/**
    plugins/**
    configs/**